--- a/lab_3_web/package.json
+++ b/lab_3_web/package.json
@@ -1,17 +1,43 @@
 {
+    "name": "laravel-webpack-project",
+    "version": "1.0.0",
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "build": "vite build && webpack --mode=production --node-env=production",
+        "build:dev": "webpack --mode=development",
+        "build:prod": "webpack --mode=production --node-env=production",
+        "dev": "vite",
+        "watch": "webpack --watch",
+        "serve": "webpack serve",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "axios": "^1.7.4",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "popover": "^2.4.1"
     },
     "devDependencies": {
+        "@webpack-cli/generators": "^3.0.7",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "css-loader": "^7.1.2",
+        "html-webpack-plugin": "^5.6.3",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^1.0",
+        "mini-css-extract-plugin": "^2.9.1",
         "postcss": "^8.4.47",
+        "postcss-loader": "^8.1.1",
+        "prettier": "^3.3.3",
+        "sass": "^1.83.0",
+        "sass-loader": "^16.0.2",
+        "style-loader": "^4.0.0",
         "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
+        "vite": "^6.0.4",
+        "webpack": "^5.95.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.1.0"
     }
 }
