--- a/lab_3_web/package.json
+++ b/lab_3_web/package.json
@@ -19,8 +19,10 @@
         "popover": "^2.4.1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@webpack-cli/generators": "^3.0.7",
-        "autoprefixer": "^10.4.20",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "concurrently": "^9.0.1",
         "css-loader": "^7.1.2",
         "html-webpack-plugin": "^5.6.3",
@@ -28,13 +30,13 @@
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^1.0",
         "mini-css-extract-plugin": "^2.9.1",
-        "postcss": "^8.4.47",
+        "postcss": "^8.4.31",
         "postcss-loader": "^8.1.1",
         "prettier": "^3.3.3",
         "sass": "^1.83.0",
         "sass-loader": "^16.0.2",
         "style-loader": "^4.0.0",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.1.0",
         "vite": "^6.0.4",
         "webpack": "^5.95.0",
         "webpack-cli": "^5.1.4",
